# chunk-reader

./: Cargo.toml  README.md
src/: debug.rs  file.rs  lib.rs  wasm.rs
tests/: chunk_reader.rs
