[package]
name = "chunk-reader"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "reads octets async on multiple platforms"
repository = "https://github.com/piot/chunk-reader"
categories = ["asynchronous", "filesystem", "network-programming"]
keywords = ["loading", "async", "wasm", "network", "io"]

[dependencies]
tracing = "0.1.40"
async-trait = "0.1.83"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.72", features = [
    "Window",
    "WorkerGlobalScope",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Blob",
    "console"
] }
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# No additional dependencies

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
